--- a/notebooks/_toc.yml
+++ b/notebooks/_toc.yml
@@ -1,14 +1,16 @@
 format: jb-book
 root: intro
-chapters:
-- file: 00_Build_Catalog
-- file: 01_Compute_20yr_mean
-- file: 02_Plot_Output
-  sections:
-  - file: physics_variables
-  - file: physics_fluxes
-  - file: bgc_0
-  - file: bgc_1
-  - file: bgc_2
-  - file: bgc_3
+parts:
+    - caption: Build Catalog and Compute
+      chapters:
+          - file: 00_Build_Catalog
+          - file: 01_Compute_20yr_mean
+    - caption: Physics Plots
+      chapters:
+          - file: physics_SHF_QSW.ipynb
+            title: SHF QSW
+    - caption: Biogeochemistry Plots
+      chapters:
+          - file: biogeochemistry_O2.ipynb
+            title: O2
   
