--- a/notebooks/analysis_config.yml
+++ b/notebooks/analysis_config.yml
@@ -17,31 +17,33 @@ catalog_csv: ../data/cesm-validation-catalog.csv
 catalog_json: ../data/cesm-validation-catalog.json
 
 variables:
-    - TEMP
-    - SALT
-    - HMXL
-    - BSF
-    - IFRAC
-    - SHF
-    - SFWF
-    - SHF_QSW
-    - FG_CO2
-    - PO4
-    - photoC_TOT_zint
-    - photoC_sp_zint
-    - photoC_diat_zint
-    - photoC_diaz_zint
-    - POC_FLUX_100m
-    - diaz_Nfix
-    - SiO2_PROD
-    - CaCO3_FLUX_100m
-    - SiO2_FLUX_100m
-    - ALK
-    - DIC
-    - O2
-    - DOC
-    - DOCr
-    - NH4
-    - NO3
-    - SiO3
+    physics:
+        - TEMP
+        - SALT
+        - HMXL
+        - BSF
+        - IFRAC
+        - SHF
+        - SFWF
+        - SHF_QSW
+    biogeochemistry:
+        - FG_CO2
+        - PO4
+        - photoC_TOT_zint
+        - photoC_sp_zint
+        - photoC_diat_zint
+        - photoC_diaz_zint
+        - POC_FLUX_100m
+        - diaz_Nfix
+        - SiO2_PROD
+        - CaCO3_FLUX_100m
+        - SiO2_FLUX_100m
+        - ALK
+        - DIC
+        - O2
+        - DOC
+        - DOCr
+        - NH4
+        - NO3
+        - SiO3
   
