--- a/notebooks/_config.yml
+++ b/notebooks/_config.yml
@@ -3,4 +3,6 @@ author: MARBL Team
 logo: marbl_pic.jpeg
 execute:
   execute_notebooks: "off"
+repository:
+  url: https://github.com/marbl-bgc-diagnostics
 
